# sim-corp

./: .dockerignore  .gitignore  .prettierrc.json  AGENTS.md  CONTINUITY.md  PROGRESS.md  README.md  REVIEW-2026-01-04.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.eslint.json  tsconfig.json  vitest.config.ts
.github/: pull_request_template.md
agents/roast-report-agent/: package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
agents/sim-roast-runner/: package.json  tsconfig.json  vitest.config.ts
apps/roaster-desktop/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/roaster-desktop/src-tauri/: .gitignore  Cargo.toml  sync-version.mjs  tauri.conf.json
apps/roaster-desktop/src-tauri/src/: main.rs
docs/: database-migration.md
docs/analysis/: eval-improvements-anthropic-article.md
docs/drivers/: tcp-line.md
docs/engineering/: agent-harness.md  contracts.md  eval-and-autonomy.md  llm-coding-rules.md  repo-structure.md
docs/foundation/: agent-charters.md  company-kernel-p0.md  mvp-artisan.md  p0-decisions.md  system-architecture.md  vertical-coffee-roaster.md  vision.md
docs/ops/: command-service.md  connection-pooling-caching.md  device-identity.md  disaster-recovery.md  (+13 more)
drivers/tcp-line/native/: Cargo.toml
drivers/tcp-line/native/src/: lib.rs
scripts/: add-health-to-services.mjs  add-metrics-to-services.mjs  demo-local.sh  require-node-major.mjs  staging-down.sh  staging-up.sh
tasks/: sprint0.md
var/: ingestion.db  kernel.db-shm  kernel.db-wal
(+501 files in other folders)
