[package]
name = "roaster-desktop"
version = "0.0.1"
authors = ["Sim Corp"]
edition = "2021"
description = "Artisan.ts desktop shell"

[build-dependencies]
tauri-build = { version = "1.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = ["protocol-asset", "devtools"] }
tauri-plugin-store = { version = "0.5", features = ["default"] }

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
strip = "debuginfo"
