[package]
name = "tcp_line_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
tokio = { version = "1.41", features = ["net", "time", "io-util", "sync", "macros", "rt-multi-thread"] }
napi = { version = "2.16", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2.16"

[build-dependencies]
napi-build = "2"
